<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/general_settings">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_backup"
            android:textColor="@color/white"
            android:title="@string/auto_backup_apps"/>

    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/about">

        <android.support.v7.preference.Preference
            android:key="size"
            android:textColor="@color/white"
            android:title="@string/kam_folder_size"/>

        <android.support.v7.preference.Preference
            android:key="version"
            android:textColor="@color/white"
            android:title="@string/app_version"/>

        <android.support.v7.preference.Preference
            android:key="sourceCode"
            android:textColor="@color/white"
            android:title="@string/open_source"/>

        <android.support.v7.preference.Preference
            android:key="libraries"
            android:textColor="@color/white"
            android:title="@string/libs"/>

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>